@@ -1,0 +1,95 @@
+vn_sepulchre = {
+    icon = GFX_holy_order_sepulchre
+    trigger = {
+        NOT = { current_age = age_of_empire }
+        primary_culture = outremer
+		religion_group = christian
+    }
+    color = { 150 150 150 }
+    cost = 50
+    cost_type = adm_power
+    per_province_effect = {
+        add_base_tax = 1
+    }
+    per_province_abandon_effect = {
+        add_base_tax = -1
+        hidden_effect = {
+            if = {
+                limit = { NOT = { base_tax = 1 } }
+                set_base_tax = 1
+            }
+        }
+    }
+    modifier = {
+        local_state_maintenance_modifier = -0.2
+        local_institution_spread = 0.1
+    }
+    ai_priority = {
+        factor = 2
+    }
+    localization = holy_order
+}
+
+vn_lazarus = {
+    icon = GFX_holy_order_lazarus
+    trigger = {
+        NOT = { current_age = age_of_empire }
+        primary_culture = outremer
+		religion_group = christian
+    }
+    color = { 0 140 0 }
+    cost = 50
+    cost_type = dip_power
+    per_province_effect = {
+        add_base_production = 1
+    }
+    per_province_abandon_effect = {
+        add_base_production = -1
+        hidden_effect = {
+            if = {
+                limit = { NOT = { base_production = 1 } }
+                set_base_production = 1
+            }
+        }
+    }
+    modifier = {
+        local_monthly_devastation = -0.1
+        local_unrest = -1
+    }
+    ai_priority = {
+        factor = 2
+    }
+    localization = holy_order
+}
+
+vn_templars = {
+    icon = GFX_holy_order_templars
+    trigger = {
+        NOT = { current_age = age_of_empire }
+        primary_culture = outremer
+		religion_group = christian
+    }
+    color = { 205 55 0 }
+    cost = 50
+    cost_type = mil_power
+    per_province_effect = {
+        add_base_manpower = 1
+    }
+    per_province_abandon_effect = {
+        add_base_manpower = -1
+        hidden_effect = {
+            if = {
+                limit = { NOT = { base_manpower = 1 } }
+                set_base_manpower = 1
+            }
+        }
+    }
+    modifier = {
+        local_defensiveness = 0.15
+        local_fort_maintenance_modifier = -0.5
+    }
+    ai_priority = {
+        factor = 2
+    }
+    localization = holy_order
+}
