@@ -1248,10 +1248,6 @@ spriteTypes = {
 		texturefile = "gfx//interface//great_projects//great_project_cluny_abbey.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_pierre_cathedral"	
-		texturefile = "gfx//interface//great_projects//great_project_pierre_cathedral.dds"
-	}
-	spriteType = {
 		name = "GFX_great_project_torre_del_oro"	
 		texturefile = "gfx//interface//great_projects//great_project_torre_del_oro.dds"
 	}
@@ -1272,8 +1268,8 @@ spriteTypes = {
 		texturefile = "gfx//interface//great_projects//great_project_siwa_oasis.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_chouara_tannery"	
-		texturefile = "gfx//interface//great_projects//great_project_chouara_tannery.dds"
+		name = "GFX_great_project_fes_el_bali"	
+		texturefile = "gfx//interface//great_projects//great_project_fes_el_bali.dds"
 	}
 	spriteType = {
 		name = "GFX_great_project_lighthouse_of_alexandria"	
@@ -1320,8 +1316,8 @@ spriteTypes = {
 		texturefile = "gfx//interface//great_projects//great_project_brugge_belfry.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_kuklak_castle"	
-		texturefile = "gfx//interface//great_projects//great_project_kuklak_castle.dds"
+		name = "GFX_great_project_sis_castle"	
+		texturefile = "gfx//interface//great_projects//great_project_sis_castle.dds"
 	}
 	spriteType = {
 		name = "GFX_great_project_ancient_center_of_paphos"	
@@ -1344,10 +1340,6 @@ spriteTypes = {
 		texturefile = "gfx//interface//great_projects//great_project_montecassino.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_upper_svaneti_towns"	
-		texturefile = "gfx//interface//great_projects//great_project_upper_svaneti_towns.dds"
-	}
-	spriteType = {
 		name = "GFX_great_project_mount_kazbek"	
 		texturefile = "gfx//interface//great_projects//great_project_mount_kazbek.dds"
 	}
@@ -1364,8 +1356,8 @@ spriteTypes = {
 		texturefile = "gfx//interface//great_projects//great_project_bakhchisaray_palace.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_palermo_cathedral"	
-		texturefile = "gfx//interface//great_projects//great_project_palermo_cathedral.dds"
+		name = "GFX_great_project_palazzo_dei_normanni"	
+		texturefile = "gfx//interface//great_projects//great_project_palazzo_dei_normanni.dds"
 	}
 	spriteType = {
 		name = "GFX_great_project_mount_athos"	
@@ -1432,52 +1424,76 @@ spriteTypes = {
 		texturefile = "gfx//interface//great_projects//great_project_saint_emilion_vineyards.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_su_nuraxi"	
+		name = "GFX_great_project_su_nuraxi"
 		texturefile = "gfx//interface//great_projects//great_project_su_nuraxi.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_archivo_general_de_indias"	
+		name = "GFX_great_project_archivo_general_de_indias"
 		texturefile = "gfx//interface//great_projects//great_project_archivo_general_de_indias.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_house_of_the_blackheads"	
+		name = "GFX_great_project_house_of_the_blackheads"
 		texturefile = "gfx//interface//great_projects//great_project_house_of_the_blackheads.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_radimlja_necropolis"	
+		name = "GFX_great_project_radimlja_necropolis"
 		texturefile = "gfx//interface//great_projects//great_project_radimlja_necropolis.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_saint_convent_of_st_gall"	
+		name = "GFX_great_project_convent_of_st_gall"
 		texturefile = "gfx//interface//great_projects//great_project_convent_of_st_gall.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_saint_old_city_of_berne"	
+		name = "GFX_great_project_old_city_of_berne"
 		texturefile = "gfx//interface//great_projects//great_project_old_city_of_berne.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_saint_danevirke"	
+		name = "GFX_great_project_danevirke"
 		texturefile = "gfx//interface//great_projects//great_project_danevirke.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_castel_del_monte"	
+		name = "GFX_great_project_castel_del_monte"
 		texturefile = "gfx//interface//great_projects//great_project_castel_del_monte.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_cathedral_of_holy_wisdom"	
+		name = "GFX_great_project_cathedral_of_holy_wisdom"
 		texturefile = "gfx//interface//great_projects//great_project_cathedral_of_holy_wisdom.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_brussels_town_hall"	
+		name = "GFX_great_project_brussels_town_hall"
 		texturefile = "gfx//interface//great_projects//great_project_brussels_town_hall.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_beiteddine_palace"	
+		name = "GFX_great_project_beiteddine_palace"
 		texturefile = "gfx//interface//great_projects//great_project_beiteddine_palace.dds"
 	}
 	spriteType = {
-		name = "GFX_great_project_temple_of_uppsala"	
+		name = "GFX_great_project_temple_of_uppsala"
 		texturefile = "gfx//interface//great_projects//great_project_temple_of_uppsala.dds"
+	}
+	spriteType = {
+		name = "GFX_great_project_terrasses_de_lavaux"
+		texturefile = "gfx//interface//great_projects//great_project_terrasses_de_lavaux.dds"
+	}
+	spriteType = {
+		name = "GFX_great_project_hevsel_gardens"
+		texturefile = "gfx//interface//great_projects//great_project_hevsel_gardens.dds"
+	}
+	spriteType = {
+		name = "GFX_great_project_algiers_qasbah"
+		texturefile = "gfx//interface//great_projects//great_project_algiers_qasbah.dds"
+	}
+	spriteType = {
+		name = "GFX_great_project_mzab_valley"
+		texturefile = "gfx//interface//great_projects//great_project_mzab_valley.dds"
+	}
+	spriteType = {
+		name = "GFX_great_project_city_of_sarai"
+		texturefile = "gfx//interface//great_projects//great_project_city_of_sarai.dds"
+	}
+	spriteType = {
+		name = "GFX_great_project_orto_botanico_di_padova"
+		texturefile = "gfx//interface//great_projects//great_project_orto_botanico_di_padova.dds"
 	}
 
 	#GOVERNMENT MECHANICS
@@ -1557,5 +1573,24 @@ spriteTypes = {
 		texturefile = "gfx//interface//government_mechanics/jerusalem/jerusalem_mil_button.dds"
 		loadType = "INGAME"
 		transparencecheck = yes
+	}
+
+	#HOLY ORDERS
+	spriteType = {
+		name = "GFX_holy_order_sepulchre"
+		texturefile = "gfx/interface/holy_orders/holy_order_sepulchre.dds"
+		noOfFrames = 4
+	}
+
+	spriteType = {
+		name = "GFX_holy_order_lazarus"
+		texturefile = "gfx/interface/holy_orders/holy_order_lazarus.dds"
+		noOfFrames = 4
+	}
+
+	spriteType = {
+		name = "GFX_holy_order_templars"
+		texturefile = "gfx/interface/holy_orders/holy_order_templars.dds"
+		noOfFrames = 4
 	}
 }
