@@ -1126,3 +1126,9 @@
  buzhengshi: "Protasekretis"
  anchasi: "Logothetes"
  du_si: "Domestikos"
+ vn_sepulchre: "Order of the Holy Sepulchre"
+ vn_sepulchre_desc: "Established around 1099, the Order of the Holy Sepulchre was closely rooted in the Kingdom of Jerusalem, promoting the Christian presence and authority in Outremer."
+ vn_lazarus: "Order of Saint Lazarus"
+ vn_lazarus_desc: "The Order of Saint Lazarus, founded around 1113, was dedicated to the medical care and support of lepers and other sick people."
+ vn_templars: "Order of the Knights Templar"
+ vn_templars_desc: "As experienced warriors, the Order of the Knights Templar, founded in 1118, maintained numerous castles to protect Christian pilgrimage routes in the Holy Land."
