@@ -1126,3 +1126,9 @@
  buzhengshi: "Protasekretis"
  anchasi: "Logothetes"
  du_si: "Domestikos"
+ vn_sepulchre: "Orden vom Heiligen Grab"
+ vn_sepulchre_desc: "Der um 1099 gegründete Orden des Heiligen Grabes war eng mit dem Königreich Jerusalem verwurzelt und förderte die christliche Präsenz und Autorität in Outremer."
+ vn_lazarus: "Orden des Heiligen Lazarus"
+ vn_lazarus_desc: "Der um 1113 gegründete Lazarus-Orden widmete sich der medizinischen Versorgung und Betreuung von Aussätzigen und anderen kranken Menschen."
+ vn_templars: "Templerorden"
+ vn_templars_desc: "Als erfahrene Krieger unterhielt der 1118 gegründete Orden der Tempelritter zahlreiche Burgen zum Schutz der christlichen Pilgerwege im Heiligen Land."
