@@ -3,6 +3,7 @@
 # v 2.2.11 #
 
 -Updated the mod to EU4 version 1.37
+-Added the following new local organizations: Order of the Holy Sepulchre, Order of Saint Lazarus, Order of the Knights Templar (for Outremer countries)
 -Added partial principalities as new subject type for the Kievan Rus
 -Added an event for the establishment of the Second Bulgarian Empire
 -Added the following new mercenary companies: Black Klobuks
